--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       --shadow: 0 10px 30px rgba(0,0,0,.18);
       --muted:#787676;
     }
-
+  [data-home-only]{ display:block !important; }
     /* Универсальное скрытие по атрибуту */
     [hidden]{ display:none !important; }
 
