--- a/index.html
+++ b/index.html
@@ -91,22 +91,29 @@
 })();
 </script>
 <script>
-/* Гарантируем видимость верхнего бара при первом входе (включая Telegram кнопки) */
+/* Гарантируем видимость верхнего бара при первом входе (любой маршрут, включая уведомления) */
 (function ensureTopbarOnFirstOpen(){
-  function showIfHome(){
-    var de  = document.documentElement;
-    var onHome = de.classList.contains('route-home');
-    if (!onHome) return;
+  var booted = false;
+  function showOnce(){
+    if (booted) return;
     var hdr = document.querySelector('.app-header');
-    if (hdr) hdr.classList.remove('hidden');      // снять «невидимость»
-    // data-home-only уже управляются через .route-home/.route-other
+    if (hdr) {
+      hdr.classList.remove('hidden');     // снять возможную невидимость
+      // на случай, если где-то ставили style="display:none"
+      hdr.style.removeProperty('display');
+      hdr.style.removeProperty('visibility');
+      document.documentElement.setAttribute('data-hdr-boot', '1');
+      booted = true;
+    }
   }
-  // как можно раньше + на основных событиях
-  showIfHome();
-  document.addEventListener('DOMContentLoaded', showIfHome, { once:true });
-  window.addEventListener('load', showIfHome, { once:true });
+  // максимально рано
+  showOnce();
+  document.addEventListener('readystatechange', showOnce, { once:true });
+  document.addEventListener('DOMContentLoaded', showOnce, { once:true });
+  window.addEventListener('load', showOnce, { once:true });
 })();
 </script>
+
 
 
   <!-- Fonts / styles -->
