--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@
     .ps-actions{ display:flex; gap:10px; justify-content:flex-end; align-items:center; margin-top:4px }
     .ps-actions .btn-primary{ padding:10px 14px; border-radius:12px; display:inline-flex; align-items:center; gap:8px }
     .ps-actions .btn-ghost{ padding:10px 12px; border:1px solid var(--stroke); background:transparent; border-radius:12px }
+
+    /* якоря для .dot */
+.tabbar .tab,
+.menu .menu-item {
+  position: relative;
+  overflow: visible; /* чтобы точка не обрезалась рамкой/скруглениями */
+}
+
   </style>
 
   <!-- Telegram WebApp -->
