--- a/index.html
+++ b/index.html
@@ -131,8 +131,6 @@
 
     /* === Уведомления (новая система "точек") === */
     .app-header .notif-btn { display:none !important; } /* прячем колокольчик */
- 
-
 
     .badge-wrap{ position:relative } /* чтобы не сломать бейдж корзины */
 
@@ -163,8 +161,19 @@
     .ps-actions .btn-primary{ padding:10px 14px; border-radius:12px; display:inline-flex; align-items:center; gap:8px }
     .ps-actions .btn-ghost{ padding:10px 12px; border:1px solid var(--stroke); background:transparent; border-radius:12px }
 
-
-
+    /* ==== ПУСТОЙ СТАТИЧНЫЙ ХЕДЕР: без названия, выше по высоте ==== */
+    .app-header{
+      /* делаем пустую полосу-хедер */
+      min-height: 76px;                 /* увеличенная высота */
+      padding: 0;
+      border-bottom: 1px solid var(--stroke);
+      background: transparent;
+    }
+    /* учитываем безопасную область сверху в Telegram/на айфонах */
+    .tg-webapp .app-header{
+      padding-top: var(--safe-top);
+      min-height: calc(76px + var(--safe-top));
+    }
   </style>
 
   <!-- Telegram WebApp -->
@@ -208,18 +217,8 @@
 
 <body>
   <div id="app">
-    <!-- Статичный хедер -->
-    <header class="app-header" role="banner">
-      <div class="hdr-left">
-        <div class="brand"><span class="app-title" aria-label="EVLISE OUTLET">EVLISE OUTLET</span></div>
-      </div>
-      <div class="hdr-right">
-        <!-- Колокольчик скрыт CSS-ом .notif-btn -->
-        <button id="openNotifications" class="icon-btn notif-btn" aria-label="Уведомления" aria-live="polite" aria-atomic="true">
-          <i data-lucide="bell"></i><b id="notifBadge" class="badge" hidden>0</b>
-        </button>
-      </div>
-    </header>
+    <!-- Статичный хедер (пустой) -->
+    <header class="app-header" role="banner" aria-label="Верхняя панель"></header>
 
     <!-- Фикс-хедер товара -->
     <div id="productFixHdr" class="product-fixhdr" aria-hidden="true">
